syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.postchain.server.grpc";
option java_outer_classname = "PostchainProto";

package postchain.rpc;


service PostchainService {
  rpc StartBlockchain (StartBlockchainRequest) returns (StartBlockchainReply) {} // Start blockchain with ID
  rpc StopBlockchain (StopBlockchainRequest) returns (StopBlockchainReply) {} // Stop blockchain with ID
  rpc InitializeBlockchain (InitializeBlockchainRequest) returns (InitializeBlockchainReply) {} // Adds and starts blockchain
  rpc AddConfiguration (AddConfigurationRequest) returns (AddConfigurationReply) {} // Add configuration at height
  rpc FindBlockchain (FindBlockchainRequest) returns (FindBlockchainReply) {} // Find blockchain rid
  rpc AddBlockchainReplica (AddBlockchainReplicaRequest) returns (AddBlockchainReplicaReply) {} // Add a bc replica
  rpc RemoveBlockchainReplica (RemoveBlockchainReplicaRequest) returns (RemoveBlockchainReplicaReply) {} // Remove a bc replica
  rpc ExportBlockchain (ExportBlockchainRequest) returns (ExportBlockchainReply) {} // Export blockchain to file
  rpc ImportBlockchain (ImportBlockchainRequest) returns (ImportBlockchainReply) {} // Import blockchain from file
}

message InitializeBlockchainRequest {
  int64 chainId = 1;
  bool override = 2;
  oneof config {
    string xml = 3;
    bytes gtv = 4;
  }
  optional string brid = 5;
}

message InitializeBlockchainReply {
  bool success = 1;
  string message = 2;
  string brid = 3;
}

message AddConfigurationRequest {
  int64 chainId = 1;
  int64 height = 2;
  bool override = 3;
  oneof config {
    string xml = 4;
    bytes gtv = 5;
  }
}

message AddConfigurationReply {
  string message = 1;
}

message StartBlockchainRequest {
  int64 chainId = 1;
}

message StartBlockchainReply {
  string message = 1;
}

message StopBlockchainRequest {
  int64 chainId = 1;
}

message StopBlockchainReply {
  string message = 1;
}

message FindBlockchainRequest {
  int64 chainId = 1;
}

message FindBlockchainReply {
  string brid = 1;
  bool active = 2;
  int64 height = 3;
}

message AddBlockchainReplicaRequest {
  string brid = 1;
  string pubkey = 2;
}

message AddBlockchainReplicaReply {
  string message = 1;
}

message RemoveBlockchainReplicaRequest {
  string brid = 1;
  string pubkey = 2;
}

message RemoveBlockchainReplicaReply {
  string message = 1;
}

message ExportBlockchainRequest {
  int64 chainId = 1;
  string configurationsFile = 2;
  string blocksFile = 3;
  int64 fromHeight = 4;
  int64 upToHeight = 5;
}

message ExportBlockchainReply {
  int64 fromHeight = 1;
  int64 upHeight = 2;
  int64 numBlocks = 3;
}

message ImportBlockchainRequest {
  int64 chainId = 1;
  string configurationsFile = 2;
  string blocksFile = 3;
  bool incremental = 4;
}

message ImportBlockchainReply {
  int64 fromHeight = 1;
  int64 toHeight = 2;
  int64 numBlocks = 3;
  bytes blockchainRid = 4;
}
